// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CloseIcon when asked to render renders 1`] = `
<svg
  aria-hidden="true"
  fill="none"
  height="24"
  stroke="currentColor"
  strokeLinecap="round"
  strokeLinejoin="round"
  strokeWidth="2"
  viewBox="0 0 24 24"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M18 6 6 18"
  />
  <path
    d="m6 6 12 12"
  />
</svg>
`;

exports[`CloseIcon when asked to render with additional class renders with additional class 1`] = `
<svg
  aria-hidden="true"
  className="some-class"
  fill="none"
  height="24"
  stroke="currentColor"
  strokeLinecap="round"
  strokeLinejoin="round"
  strokeWidth="2"
  viewBox="0 0 24 24"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M18 6 6 18"
  />
  <path
    d="m6 6 12 12"
  />
</svg>
`;
